--- a/.env
+++ b/.env
@@ -1,6 +1,3 @@
 REACT_APP_API_URL= https://api.example.com
 #Harmeet's key
-REACT_APP_API_KEY= N2Y0ZjA4MzRiODU3NGVmMWJmZDkyNmU5MjkyNzdjYmYtMTcxMzUwMjY1Mw==  
-
-#Pratiksha's key
-# REACT_APP_API_KEY= MDhiMDQwM2JiMjAzNGMwYmEyMjNiYmY0ZWUyYTI1NzItMTcxMzUyMTQ3OQ==  
+REACT_APP_API_KEY= API-KEY
